crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__install_deps__doesnt_add_if_disabled_in_config.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
}
