crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__install_deps__graphs_if_tier2.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="InstallDependencies(tc-tier2, bar)"]
    1 -> 0 [ label="required"]
}
