crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__install_deps__graphs_multiple_toolchain_versions_using_overrides.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SetupProto(1.2.3)"]
    2 [ label="SetupToolchain(rust:1.70.0)"]
    3 [ label="SetupToolchain(rust:1.90.0)"]
    2 -> 0 [ label="required"]
    2 -> 1 [ label="required"]
    3 -> 0 [ label="required"]
    3 -> 1 [ label="required"]
}
