crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__install_deps__graphs_setup_env_chain_if_defined.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupEnvironment(tc-tier2-setup-env)" ]
    2 [ label="InstallDependencies(tc-tier2-setup-env)" ]
    2 -> 1 [ ]
    1 -> 0 [ ]
}
