crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__install_deps__graphs_setup_toolchain_if_tier3.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupToolchain(tc-tier3:1.2.3)" ]
    2 [ label="InstallDependencies(tc-tier3:1.2.3)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
}
